chore: update env example

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ MQTT_ID_CLIENT=
 MQTT_TOPIC=pctopic
 OS_TYPE=unsupported
 ASSETS_FOLDER=assets
+AWS_ENABLED=false
+AWS_ENDPOINT=
+AWS_REGION=
+AWS_BUCKET=
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
